--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/AsignacionDeGastos/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/AsignacionDeGastos/Nuevo.cshtml
@@ -19,7 +19,7 @@
 @using (Html.BeginForm("Nuevo", "AsignacionDeGastos", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new {@id= "IdTransaccionSession" })
-    @Html.HiddenFor(q => q.IdLiquidacion)
+    @Html.HiddenFor(q => q.IdOrdenCompra_ext)
     @Html.HiddenFor(q => q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
@@ -101,7 +101,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionImportacion", new { Area ="Importacion" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "AsignacionDeGastos", new { Area ="Importacion" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
