--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Nuevo.cshtml
@@ -58,13 +58,13 @@
             <div class="col-md-8">
                 <div class="form-group">
                     <label for="IdProveedor">Proveedor*</label>
-                    @Html.Partial("_CmbProveedor_exterior", Model)
-                    @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+                    @Html.TextBoxFor(q => q.pe_nombreCompleto, new { @class = "form-control"})
+                    @Html.ValidationMessageFor(q => q.pe_nombreCompleto, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-offset-10 col-med-2">
                 <div class="form-group">
-                    <label for="">Fecha embarque</label>
+                    <label for="">Fecha liquidación</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -77,30 +77,7 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-8">
-                <div class="form-group">
-                    <label for="IdCtaCble_importacion">Cuenta contable*</label>
-                    @Html.Partial("_CmbCuenta_contable", Model)
-                    @Html.ValidationMessageFor(q => q.IdCtaCble_importacion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-offset-10 col-med-2">
-                <div class="form-group">
-                    <label for="">Fecha llegada</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.TextBoxFor(q => q.oe_fecha_llegada, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_llegada" })
-                        @Html.ValidationMessageFor(q => q.oe_fecha_llegada, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+   
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-8">
@@ -112,13 +89,13 @@
             </div>
             <div class="col-md-offset-10 col-med-2">
                 <div class="form-group">
-                    <label for="">Fecha desanualización</label>
+                    <label for="">Fecha contabilización</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
                         @Html.TextBoxFor(q => q.oe_fecha_desaduanizacion, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_desanualizacion" })
-                        @Html.ValidationMessageFor(q => q.oe_fecha_llegada, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(q => q.oe_fecha_desaduanizacion, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
