--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Nuevo.cshtml
@@ -18,9 +18,9 @@
 }
 @using (Html.BeginForm("Nuevo", "LiquidacionOrdenCompra", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdOrdenCompra_ext)
+    @Html.HiddenFor(q => q.IdOrdenCompra_ext, new { @id = "IdOrdenCompra_ext" })
     @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdTransaccionSession)
+    @Html.HiddenFor(q => q.IdTransaccionSession, new  { @id= "IdTransaccionSession" })
 
     <div class="row">
         <div class="col-md-12">
@@ -117,18 +117,19 @@
         </ul>
         <div class="tab-content" style="padding-top: 20px">
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_detalle">
-                @Html.Action("GridViewPartial_orden_compra_ext_det")
+                @Html.Action("GridViewPartial_liquidacion_oc_det")
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_gastos">
-                @Html.Action("GridViewPartial_orden_compra_ext_det", new { IdOrdenCompra_ext =Model.IdOrdenCompra_ext})
+                @Html.Action("GridViewPartial_gastos_asignados", new {Area="Importacion",Controller="AsignacionDeGastos", IdOrdenCompra_ext =Model.IdOrdenCompra_ext})
             </div>
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_gastos">
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario_contable">
 
             </div>
         </div>
     </div>
 
     <div class="box-footer">
+        <button type="button" class="btn btn-primary">Calcular</button>
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionOrdenCompra", new { Area ="Importacion" }, null)">Cancelar</a>
     </div>
@@ -156,9 +157,43 @@
         $('#fecha_desanualizacion').datepicker({
             autoclose: true
         });
+    });
+
+
+
+    $(function () {
+
+
+        $('#or_fecha').datepicker({
+            autoclose: true
+        });
 
 
     });
+    function calclar_costo(IdTransaccionSession) {
+        var datos = {
+            IdTransaccionSession: IdTransaccionSession,
+            IdOrdenCompra_ext: IdOrdenCompra_ext
+
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("calcular_costos", "LiquidacionOrdenCompra",new { Area = "Importacion"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridViewPartial_liquidacion_oc_det.PerformCallback();
+
+            },
+            error: function (error) {
+            }
+        });
+    }
+
 
 
 </script>
