--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Importacion.imp_ordencompra_ext_Info
 @{
-    ViewBag.Title = "Nueva orden compra al exterior";
+    ViewBag.Title = "Liquidacion de orden de compra";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -27,14 +27,14 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="CodMoviInven">Código</label>
-                    @Html.TextBoxFor(q => q.oe_codigo, new { @class = "form-control" })
+                    @Html.TextBoxFor(q => q.oe_codigo, new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.oe_codigo, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="rub_grupo">Tipo de embarque*</label>
-                    @Html.DropDownListFor(q => q.IdCatalogo_via, new SelectList(ViewBag.lst_catalogos, "IdCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.DropDownListFor(q => q.IdCatalogo_via, new SelectList(ViewBag.lst_catalogos, "IdCatalogo", "ca_descripcion"), new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdCatalogo_via, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -45,7 +45,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.oe_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_oc" })
+                        @Html.TextBoxFor(q => q.oe_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_oc",@disabled="disabled" })
                         @Html.ValidationMessageFor(q => q.oe_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -55,10 +55,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdProveedor">Proveedor*</label>
-                    @Html.TextBoxFor(q => q.pe_nombreCompleto, new { @class = "form-control"})
+                    @Html.TextBoxFor(q => q.pe_nombreCompleto, new { @class = "form-control", @disabled="disabled"})
                     @Html.ValidationMessageFor(q => q.pe_nombreCompleto, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -77,14 +77,20 @@
         </div>
     </div>
 
-   
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-8">
+            <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdCtaCble_importacion">Observación*</label>
-                    @Html.TextAreaFor(q => q.oe_observacion, new { @class = "form-control", @rows = 2 })
-                    @Html.ValidationMessageFor(q => q.oe_observacion, "", new { @class = "text-danger" })
+                    <label for="IdSucursal">Sucursal*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal_inv, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                    @Html.ValidationMessageFor(q => q.IdSucursal_inv, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdBodega">Bodega</label>
+                    @Html.DropDownListFor(q => q.IdBodega_inv, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodega" })
+                    @Html.ValidationMessageFor(q => q.IdBodega_inv, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-offset-10 col-med-2">
@@ -99,6 +105,19 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_importacion">Observación*</label>
+                    @Html.TextAreaFor(q => q.oe_observacion, new { @class = "form-control", @rows = 2 })
+                    @Html.ValidationMessageFor(q => q.oe_observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+           
         </div>
     </div>
 
@@ -120,7 +139,7 @@
                 @Html.Action("GridViewPartial_liquidacion_oc_det")
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_gastos">
-                @Html.Action("GridViewPartial_gastos_asignados", new {Area="Importacion",Controller="AsignacionDeGastos", IdOrdenCompra_ext =Model.IdOrdenCompra_ext})
+                @Html.Action("GridViewPartial_liquidacion_gastos", new  { IdTransaccionSession =Model.IdTransaccionSession})
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario_contable">
                 @Html.Action("GridViewPartial_liqidacion_dc")
